test/good/classes/method07.px

class A def
    x: Int = 3

    func f(): [A] def
        return [this] * this.x


o = A()
a = o.f()
o.x = 7
print a.map(_.x)
