test/bad/functions/call01.px

func f(x: Int): Bool def
    return x == x

f("3")
